--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,17 +1,45 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 2</title>
-    <link rel="stylesheet" href="module_2.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MODULE 2</title>
+  <link href='module_2.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div id="box">  
-        <div id="kk">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis cumque ipsam asperiores eaque hic. At magnam tempore ea labore pariatur?
-        </div>
-    
+  <div class="container">
+    <div class="row">
+
+    <p class="menu-title">Our Menu</p>
+
+    <div class="col-lg-4">
+        <div class="item">
+         <div class="item-title" id="title-one">
+            <h3>Chicken</h3>
+            </div>   
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.</p>
+            </div>
     </div>
 
+    <div class="col-lg-4">
+        <div class="item">
+         <div class="item-title" id="title-two">
+           <h3>Beef</h3>
+            </div>      
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.</p>
+            </div>
+    </div>
+
+    <div class="col-lg-4 col-lg-tablet">
+        <div class="item">
+         <div class="item-title" id="title-three">
+            <h3>Sushi</h3>
+            </div>  
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.</p>
+            </div>
+   </div>
+
+</div>
+</div>
 </body>
 </html>
